--- a/package.json
+++ b/package.json
@@ -1,23 +1,54 @@
 {
-  "name": "ps3",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
+  "_from": "pug-linker@^2.0.2",
+  "_id": "pug-linker@2.0.3",
+  "_inBundle": false,
+  "_integrity": "sha1-szH/olc33eacEntWwQ/xf652bco=",
+  "_location": "/pug-linker",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "pug-linker@^2.0.2",
+    "name": "pug-linker",
+    "escapedName": "pug-linker",
+    "rawSpec": "^2.0.2",
+    "saveSpec": null,
+    "fetchSpec": "^2.0.2"
   },
+  "_requiredBy": [
+    "/pug"
+  ],
+  "_resolved": "https://registry.npmjs.org/pug-linker/-/pug-linker-2.0.3.tgz",
+  "_shasum": "b331ffa25737dde69c127b56c10ff17fae766dca",
+  "_spec": "pug-linker@^2.0.2",
+  "_where": "/Users/nataliepienkowska/WebstormProjects/PS3/node_modules/pug",
+  "author": {
+    "name": "Forbes Lindesay"
+  },
+  "bugs": {
+    "url": "https://github.com/pugjs/pug-linker/issues"
+  },
+  "bundleDependencies": false,
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug-error": "^1.3.2",
+    "pug-walk": "^1.1.2"
   },
-  "main": "app.js",
-  "devDependencies": {},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "deprecated": false,
+  "description": "Link multiple pug ASTs together using include/extends",
+  "devDependencies": {
+    "pug-lexer": "^3.1.0",
+    "pug-load": "^2.0.6",
+    "pug-parser": "^2.0.2"
+  },
+  "homepage": "https://github.com/pugjs/pug-linker#readme",
+  "keywords": [
+    "pug"
+  ],
+  "license": "MIT",
+  "name": "pug-linker",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pugjs/pug-linker.git"
+  },
+  "version": "2.0.3"
 }
